fix: remove unnecessary z-index on modal content

--- a/figma-kit/src/components/dialog.base/dialog.base.css
+++ b/figma-kit/src/components/dialog.base/dialog.base.css
@@ -6,7 +6,6 @@
   box-shadow: var(--elevation-500);
   overflow-y: auto;
   outline: 0;
-  z-index: 1;
 }
 
 .fp-DialogBaseHeader {
@@ -51,5 +50,4 @@
   position: fixed;
   inset: 0;
   background-color: var(--color-overlay-dialog);
-  z-index: 1;
 }
